[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.19", features = ["json"] }
rocket = { version="=0.5.0-rc.3", features = ["json"] }
rustube = "0.6.0"
url = "2.4.0"
